# GameEngine

./: .gitignore  .gitmodules  GameEngine.sln  README.md  TODO.txt  gen.bat  gitCommit.bat  gitCommitPush.bat  premake5.lua
2DDevelop/: 2DDevelop.vcxproj  2DDevelop.vcxproj.filters  BoxCollider.cpp  BoxCollider.h  CBoxCollider.cpp  CCircle.h  CCollider.cpp  CCollider.h  CCollision.h  CMain.cpp  CMakeLists.txt  CMaths.h  CPhysicsEngine.cpp  CRigidBody.h  CSphereCollider.cpp  CWindow.cpp  CWindow.h  Collider.cpp  Collider.h  GameObject.cpp  GameObject.h  Main.cpp  Makefile  Maths.h  PhysicsEngine.cpp  PhysicsEngine.h  RigidBody.cpp  RigidBody.h  SphereCollider.cpp  SphereCollider.h
2DDevelop/Noise/: HeightMap.cpp  HeightMap.h  Main.cpp  NormalMap.cpp  NormalMap.h  stb_image.h  stb_image_write.h
2DDevelop/Noise/core/: NoiseStdHeaders.h
2DDevelop/Noise/utils/: NoiseBuilders.cpp  NoiseBuilders.h  NoiseEndianUtils.h  NoiseGradientRenderer.h  NoiseJobQueue.h  NoiseModules.cpp  NoiseReader.cpp  NoiseReader.h  NoiseSystem.cpp  NoiseSystem.h  NoiseWriter.h
2DDevelop/Physics/: CBoxCollider.cpp  CBoxCollider.h  CCircle.cpp  CCollider.cpp  CCollider.h  CGameObject.cpp  CGameObject.h  CMain.cpp  CPhysicsEngine.cpp  CPhysicsEngine.h  CRectangle.cpp  CRectangle.h  CRigidBody.cpp  CSphereCollider.cpp  CSphereCollider.h
2DDevelop/SAP/: CSAP.cpp  CSAP.h
2DDevelop/UILib/: Button.h  Input.h  Slider.h  Table.h  UIElement.cpp  UIElement.h  UILib.h  Window.cpp  Window.h
3D_RPG/: 3D_RPG.vcxproj  3D_RPG.vcxproj.filters
3D_RPG/include/: GameApplication.h
3D_RPG/src/: GameApplication.cpp
Engine/: Component.h  Core.h  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  EnginePch.h  Entity.h  GameObject.h  Lighting.h  Makefile  Maths.h  Model.h  Renderer.h  System.h  Util.h
Engine/Component/: Animator.cpp  Animator.h  Collider.h  ColliderComponent.cpp  ColliderComponent.h  Component.cpp  Component.h  Movement.h  MovementComponent.cpp  MovementComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  RigidBody.cpp  RigidBody.h  Sprite.cpp  Sprite.h  Transform.h
Engine/Core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Camera.cpp  Camera.h  Camera3D.cpp  Camera3D.h  EntryPoint.h  Event.cpp  Event.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Window.cpp  Window.h
Engine/Entity/: CameraController.cpp  CameraController.h  Character.cpp  Character.h  Entity.cpp  Entity.h  Transform.cpp  Transform.h
Engine/GUI/: EngineGUI.cpp  EngineGui.h  GUI.cpp  GUI.h  GUIElement.cpp  GUIElement.h  Panel.cpp  Panel.h  TextRendering.h
Engine/GameObject/: CameraController.cpp  CameraController.h  GameObject.cpp  GameObject.h  Transform.cpp  Transform.h
Engine/Include/: Component.h  Core.h  GUI.h  Material.h  Maths.h  Model.h  OpenGLAPI.h  Renderer.h  RenderingEngine.h  Shapes.h  Terrain.h  Util.h
Engine/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  Skybox.cpp  Skybox.h  SpotLight.cpp  SpotLight.h
Engine/Material/: Material.cpp  Material.h  PBRMaterial.cpp  PBRMaterial.h  RawMaterial.cpp  RawMaterial.h
Engine/Model/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
Engine/NOT USED/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  PhysicsComponent.cpp
Engine/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  Library.cpp  Library.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h  Rendering.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Engine/RenderingEngine/: CRenderingPipeline.cpp  CRenderingPipeline.h  RenderingPipeline.cpp  RenderingPipeline.h
Engine/Shapes/: Cube.cpp  Cube.h
Engine/System/: CollisionSystem.cpp  CollisionSystem.h  PhysicsEngine.cpp  PhysicsEngine.h
Engine/Terrain/: Terrain.cpp  Terrain.h  Water.cpp  Water.h
Engine/TextRendering/: Font.cpp  Font.h  Text.cpp  Text.h
Engine/Util/: Benchmark.cpp  Benchmark.h  Color.cpp  Color.h  ConfigFile.cpp  ConfigFile.h  MathsFunctions.cpp  MathsFunctions.h  Matrix.cpp  Matrix.h  Singleton.h  Smoother.h
Engine/include/: Application.h  Buffer.h  ConfigFile.h  Engine.h  EnginePch.h  EntryPoint.h  Event.h  Export.h  GraphicsContext.h  Input.h  InputCodes.h  Layer.h  LayerStack.h  Log.h  Maths.h  Renderer.h  Shader.h  VertexArray.h  Window.h
Engine/src/: Application.cpp  Buffer.cpp  ConfigFile.cpp  Event.cpp  GraphicsContext.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp  Window.cpp
Game/: Game.vcxproj  Game.vcxproj.filters  Makefile  PatchVertexArray.cpp  PatchVertexArray.h  imgui.ini  pch.h
Game/Assets/: TerrainConfig.txt
Game/Component/: Movement.cpp  Movement.h
Game/Core/: Camera.cpp  Camera.h  CameraFree.cpp  CameraFree.h  CameraLocked.cpp  CameraLocked.h  GameApplication.cpp  GameApplication.h
Game/GameObject/: Bomb.cpp  Bomb.h  Cube.cpp  Cube.h  Player.cpp  Player.h
Game/Layers/: BombermanLayer.cpp  BombermanLayer.h  GameLayer.cpp  GameLayer.h  MapLayer.cpp  MapLayer.h  MazeLayer.cpp  MazeLayer.h  TerrainLayer.cpp  TerrainLayer.h  TheChernoLayer.cpp  TheChernoLayer.h
Game/Map/: DestructibleWall.cpp  DestructibleWall.h  ExitCell.cpp  ExitCell.h  Floor.cpp  Floor.h  Map.cpp  Map.h  Wall.cpp  Wall.h
Game/Models/: Cube.cpp  Cube.h  Map.cpp  Map.h  Maze.cpp  Maze.h
Game/Terrain/: Terrain.cpp  Terrain.h  TerrainConfiguration.cpp  TerrainConfiguration.h  TerrainMaterial.cpp  TerrainMaterial.h  TerrainNode.cpp  TerrainNode.h  TerrainQuadTree.cpp  TerrainQuadTree.h  TerrainShader.cpp  TerrainShader.h
Game/Util/: FileLoader.cpp  FileLoader.h  Node.cpp  Node.h
Game/include/: GameApplication.h  pch.h
Game/src/: GameApplication.cpp
Sandbox/: Makefile  Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Sandbox/Assets/: TerrainConfig.txt
Sandbox/Core/: CameraFree.cpp  CameraFree.h  CameraLocked.cpp  SandboxApplication.cpp  SandboxApplication.h
Tools/: CRLFfromCR.cpp  SetModelOriginToCenter.cpp
(+298 files in other folders)
